--- a/fly.toml
+++ b/fly.toml
@@ -1,39 +1,32 @@
-# fly.toml app configuration file generated for the-brogrammer on 2023-05-27T16:10:20-07:00
+# fly.toml app configuration file generated for the-brogrammer-restless-thunder-2067 on 2024-03-26T11:27:07-07:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = "the-brogrammer"
-primary_region = "sea"
-kill_signal = "SIGTERM"
-kill_timeout = "5s"
+app = 'the-brogrammer'
+primary_region = 'sea'
+kill_signal = 'SIGTERM'
 
-[experimental]
-  auto_rollback = true
+[build]
 
 [env]
-  PHX_HOST = "the-brogrammer.fly.dev"
-  PORT = "8080"
+  PHX_HOST = 'the-brogrammer-restless-thunder-2067.fly.dev'
+  PORT = '8080'
 
-[[services]]
-  protocol = "tcp"
+[http_service]
   internal_port = 8080
-  processes = ["app"]
+  force_https = true
+  auto_stop_machines = true
+  auto_start_machines = true
+  min_machines_running = 0
+  processes = ['app']
 
-  [[services.ports]]
-    port = 80
-    handlers = ["http"]
+  [http_service.concurrency]
+    type = 'connections'
+    hard_limit = 1000
+    soft_limit = 1000
 
-  [[services.ports]]
-    port = 443
-    handlers = ["tls", "http"]
-  [services.concurrency]
-    type = "connections"
-    hard_limit = 25
-    soft_limit = 20
-
-  [[services.tcp_checks]]
-    interval = "15s"
-    timeout = "2s"
-    grace_period = "1s"
-    restart_limit = 0
+[[vm]]
+  memory = '1gb'
+  cpu_kind = 'shared'
+  cpus = 1
